--- a/assets/app.scss
+++ b/assets/app.scss
@@ -29,8 +29,8 @@ a
 //   height: 100%;
   /* width: 99%; */
 
-  height: 1000px;
-  background-color: #3df5ff46;
+  height: 3000px;
+//   background-color: #3df5ff46;
   display: flex;
   flex-direction: column;
 
