--- a/assets/app.scss
+++ b/assets/app.scss
@@ -2,6 +2,7 @@
     // --primary-color-text-header: rgba(26,26,26); 
     --primary-color-text: rgb(90, 90, 90); 
     --light-color-text: rgb(160, 160, 160); 
+    --dark-color-text: rgb(0, 0, 0); 
     --fontsize-big-default: 25px;
     --fontsize-small-default: 13px;
     --fontsize-light-small-default: 11px;
@@ -21,7 +22,7 @@ a
 
 .default 
 {
-  border: 1px solid #b9e39e;
+//   border: 1px solid #b9e39e;
   /* padding: 100px; */
   /* position: relative; */
 
@@ -29,7 +30,7 @@ a
 //   height: 100%;
   /* width: 99%; */
 
-  height: 3000px;
+//   height: 3000px;
 //   background-color: #3df5ff46;
   display: flex;
   flex-direction: column;
@@ -59,6 +60,12 @@ a
 {
     width: auto;
     height: 10px;
+}
+
+.icon-in-text2
+{
+    width: auto;
+    height: 13px;
 }
 
 
