--- a/assets/app.scss
+++ b/assets/app.scss
@@ -7,6 +7,8 @@
     --fontsize-small-default: 13px;
     --fontsize-light-small-default: 11px;
     font-family: Roboto,Arial,sans-serif;
+
+    --margin-slider: 50px;
     }
 
 
@@ -31,7 +33,7 @@ a
   /* width: 99%; */
 
 //   height: 3000px;
-//   background-color: #3df5ff46;
+  background-color: #3df5ff46;
   display: flex;
   flex-direction: column;
 
