--- a/assets/app.scss
+++ b/assets/app.scss
@@ -6,7 +6,7 @@
     --fontsize-big-default: 25px;
 
     --fontsize-default: 20px;
-
+    --fontsize-text-video: 14px;
     --fontsize-small-default: 13px;
     --fontsize-light-small-default: 11px;
     font-family: Roboto,Arial,sans-serif;
@@ -14,6 +14,10 @@
     --margin-slider: 50px;
 
     --background-product:#f4f4f4;
+
+
+    --color1-btn-play: white;
+    --color2-btn-play: green;
 
     }
 
