--- a/assets/app.scss
+++ b/assets/app.scss
@@ -7,6 +7,8 @@
 
     --fontsize-default: 20px;
     --fontsize-text-video: 14px;
+
+    --fontsize-medium: 15px;
     --fontsize-small-default: 13px;
     --fontsize-light-small-default: 11px;
     font-family: Roboto,Arial,sans-serif;
