--- a/assets/app.scss
+++ b/assets/app.scss
@@ -220,6 +220,7 @@ a
     font-size: var(--fontsize-small-default);
     outline: none;
     text-decoration: none;
+    cursor: pointer;
     // text-align: left;
 }
 
