--- a/assets/marg.scss
+++ b/assets/marg.scss
@@ -7,3 +7,26 @@
 
     // --marg-hor-show-comp: 65px;
 }
+
+.marg-left-def
+{
+    margin-left: 15px;
+}
+
+.marg-right-def
+{
+    margin-right: 15px;
+}
+
+.marg-left-big
+{
+    margin-left: var(--marg-show-comp);
+    // margin-left: 15px;
+}
+
+.marg-right-big
+{
+    margin-right: var(--marg-show-comp);
+    // margin-left: 15px;
+}
+
