--- a/assets/checkBox.scss
+++ b/assets/checkBox.scss
@@ -37,13 +37,6 @@
     }
 }
 
-.check_1
-{
-    height:18px;
-    // width:19px;
-    width:20px;
-}
-
 input[type="checkbox"] {
       -webkit-appearance: none;
       -moz-appearance: none;
@@ -54,6 +47,11 @@ input[type="checkbox"] {
       border-radius: 4px;
 
       margin-left: 0;
+
+      height:18px;
+      // width:19px;
+      width:18px;
+
     //   cursor: pointer;
     }
 
@@ -79,3 +77,10 @@ input[type="checkbox"] {
     color: var(--btn-color1); /* цвет галочки */
 
     }
+
+.check_1
+{
+    height: 18px !important;;
+    // width:19px;
+    width: 20px !important;
+}
