--- a/assets/fonts.scss
+++ b/assets/fonts.scss
@@ -1,6 +1,18 @@
+h1,h2,h3,h4,h5,h6 
+{
+    font-family: Roboto,Arial,sans-serif;
+    // font-weight: lighter;
+    font-weight: normal;
+}
+
 .font13
 {
     font-size: 13px;
+}
+
+.fontDark
+{
+    color: var(--dark-color-text);
 }
 
 .font16
